--- a/platformio.ini
+++ b/platformio.ini
@@ -8,11 +8,19 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[env]
+lib_deps =
+  fortyseveneffects/MIDI Library @ ^5.0.2
+  evert-arias/EasyButton @ ^2.0.1
+
 [env:nanoatmega328]
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
 
-lib_deps =
-  fortyseveneffects/MIDI Library @ ^5.0.2
-  evert-arias/EasyButton @ ^2.0.1
+[env:nodemcuv2]
+platform = espressif8266
+board = nodemcuv2
+framework = arduino
+
+monitor_speed = 31250
