--- a/platformio.ini
+++ b/platformio.ini
@@ -8,19 +8,28 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = nodemcu
+
 [env]
 lib_deps =
   fortyseveneffects/MIDI Library @ ^5.0.2
   evert-arias/EasyButton @ ^2.0.1
 
-[env:nanoatmega328]
+[env:arduinonano]
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
 
-[env:nodemcuv2]
+build_flags =
+  -D CONFIG=ARDUINO_NANO
+
+[env:nodemcu]
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
+
+build_flags =
+  -D CONFIG=NODEMCU
 
 monitor_speed = 31250
