--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,8 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[platformio]
-default_envs = nodemcu
+; [platformio]
+; default_envs = nodemcu
 
 [env]
 lib_deps =
@@ -21,15 +21,12 @@ platform = atmelavr
 board = nanoatmega328
 framework = arduino
 
-build_flags =
-  -D CONFIG=ARDUINO_NANO
-
 [env:nodemcu]
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
 
 build_flags =
-  -D CONFIG=NODEMCU
+  -D ALT_CONFIG
 
 monitor_speed = 31250
