--- a/platformio.ini
+++ b/platformio.ini
@@ -8,11 +8,17 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[env]
+lib_deps =
+  fortyseveneffects/MIDI Library @ ^5.0.2
+  evert-arias/EasyButton @ ^2.0.1
+
+[env:nanoatmega328]
+platform = atmelavr
+board = nanoatmega328
+framework = arduino
+
 [env:nanoatmega168]
 platform = atmelavr
 board = nanoatmega168
 framework = arduino
-
-lib_deps =
-  fortyseveneffects/MIDI Library @ ^5.0.2
-  evert-arias/EasyButton @ ^2.0.1
